@@ -314,3 +314,4 @@ Issue #2137149 by johnv: Added README.txt for Workflow_rules.
 Issue #2115671 by johnv: Changed workflow_views to Views 3 API structure.
 Issue #2019345 by johnv: Fixed selection of Options in Workflow object.
 Issue #658880 by johnv: Added filter on CreationState and Workflow in worklow_views_hndler_filter_sid.
+Issue #2137149 by johnv: Fixed contructor of WorkflowTransition.
